# mitosis

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  api.md  cliff.toml  config.example.toml  config.toml  design-refinements.md  dist-workspace.toml  docker-compose.yml  improve.md  index.html  openapi.yaml  overview.md  plan.md  print.html  release-plz.toml  rfc.md  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: build.yml  gh-pages.yml  release-plz.yml  release.yml
client/: sdk.html
docs/plans/: 2026-01-30-exec-spec-refactor-design.md  2026-02-10-new-design.md  2026-02-11-phase1-decisions.md
guide/: architecture.html  book.toml  client.html  coordinator.html  development.html  installation.html  manager.html  troubleshooting.html  worker.html
guide/src/: README.md  SUMMARY.md
guide/src/client/: sdk.md
guide/src/guide/: architecture.md  client.md  coordinator.md  installation.md  manager.md  node-manager.md  task-suite.md  troubleshooting.md  worker.md
guide/src/http/: README.md  group.md  worker.md
http/: index.html
impl/: README.md
impl/phase1/: 01-database-schema.md
impl/phase2/: 01-api-schema-coordinator.md
impl/phase3/: 01-websocket-manager.md
impl/phase4/: 01-node-manager-core.md
impl/phase5/: 01-environment-hooks.md
impl/phase6/: 01-worker-spawning-ipc.md
impl/phase7/: 01-managed-worker-mode.md
impl/phase8/: 01-integration-e2e-testing.md
impl/phase9/: 01-documentation-deployment.md
netmito/: Cargo.toml
netmito/src/: agent.rs  client.rs  config.rs  coordinator.rs  error.rs  lib.rs  manager.rs  node_manager_service.rs  schema.rs  signal.rs  worker.rs
netmito/src/api/: admin.rs  agents.rs  group.rs  groups.rs  mod.rs  subscriptions.rs  suites.rs  tasks.rs  user.rs  users.rs  worker.rs  workers.rs  ws.rs
netmito/src/client/: http.rs  interactive.rs  mod.rs  persistent.rs  redis.rs
netmito/src/config/: agent.rs  client.rs  coordinator.rs  manager.rs  mod.rs  node_manager.rs  worker.rs
netmito/src/config/client/: admin.rs  agents.rs  artifacts.rs  attachments.rs  groups.rs  mod.rs  subscriptions.rs  suites.rs  tasks.rs  users.rs  workers.rs
netmito/src/entity/: active_tasks.rs  agents.rs  archived_tasks.rs  artifacts.rs  attachments.rs  content.rs  group_agent.rs  group_node_manager.rs  group_worker.rs  groups.rs  machines.rs  mod.rs  node_managers.rs  prelude.rs  role.rs  state.rs  suite_hook_executions.rs  task_execution_failures.rs  task_suite_agent.rs  task_suite_node_manager.rs  task_suites.rs  user_group.rs  users.rs  workers.rs
netmito/src/migration/: m20240416_132735_create_table.rs  m20240424_055034_create_admin_user.rs  m20250910_192001_add_performance_indices.rs  m20250910_205347_add_labels_to_workers.rs  m20250911_025409_add_gin_indices_on_tags.rs  m20250915_111689_add_tasks_trigger.rs  m20251031_000001_add_reporter_uuid_to_archived_tasks.rs  m20251117_095000_create_machines.rs  m20251117_100000_create_task_suites.rs  m20251117_110000_create_agents.rs  m20251117_110000_create_node_managers.rs  m20251117_120000_create_join_tables.rs  m20251117_130000_create_task_execution_failures.rs  m20251117_140000_alter_active_tasks.rs  m20251117_140001_alter_archived_tasks.rs  mod.rs
netmito/src/schema/: agent.rs  artifact.rs  attachment.rs  exec.rs  group.rs  mod.rs  suite.rs  task.rs  user.rs  worker.rs
netmito/src/service/: agent.rs  agent_heartbeat.rs  agent_task.rs  group.rs  mod.rs  s3.rs  subscription.rs  suite.rs  suite_task_dispatcher.rs  task.rs  user.rs  worker.rs
netmito/src/service/auth/: cred.rs  mod.rs  token.rs
netmito/src/service/s3/: mod.rs
netmito/src/service/user/: mod.rs
netmito/src/service/worker/: heartbeat.rs  mod.rs  queue.rs
netmito/src/websocket/: connection_registry.rs  handler.rs  messages.rs  mod.rs
netmito/src/ws/: connection.rs  handler.rs  mod.rs
scripts/: client.sh  install.sh  server.sh  worker.sh
src/: main.rs
