[workspace]
members = [".", "netmito"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/stack-rs/mitosis"
repository = "https://github.com/stack-rs/mitosis"
rust-version = "1.76"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["std", "derive"] }
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
redis = { version = "0.26.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "process",
    "signal",
    "net",
    "time",
    "sync",
    "io-util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "mito"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ workspace = true }
netmito = { path = "netmito" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
debugging = ["netmito/debugging"]
