[workspace]
members = [".", "netmito"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/stack-rs/mitosis"
repository = "https://github.com/stack-rs/mitosis"
rust-version = "1.76"
license = "Apache-2.0"
readme = "README.md"
description = "A Unified Distributed Transport Evaluation Framework"
keywords = ["distributed", "transport", "evaluation", "network", "utility"]
categories = ["network-programming", "concurrency", "command-line-utilities"]

[workspace.dependencies]
clap = { version = "4.5.20", features = ["std", "derive"] }
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
redis = { version = "0.26.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "process",
    "signal",
    "net",
    "time",
    "sync",
    "io-util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
allow-dirty = ["ci"]

[package]
name = "mito"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ workspace = true }
netmito = { path = "netmito" , version = "0.2.1" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
debugging = ["netmito/debugging"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
