[package]
name = "netmito"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-compression = { version = "0.4.10", features = ["gzip", "tokio"] }
aws-sdk-s3 = { version = "1.24.0", features = ["behavior-version-latest"] }
axum = { version = "0.7.4", features = ["http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.0"
clap = { workspace = true }
clap-repl = "0.1.1"
dirs = "5.0.1"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.30"
http-body-util = { version = "0.1.2", optional = true }
humansize = "2.1.3"
humantime-serde = "1.1.1"
jsonwebtoken = { workspace = true }
matrix_match = "1.0.0"
md5 = { workspace = true }
nix = { version = "0.28.0", features = ["process", "signal"] }
once_cell = "1.19.0"
ouroboros = "0.18.4"
path-clean = "1.0.1"
priority-queue = "2.0.2"
rand = "0.8.5"
redis = { workspace = true }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
roxmltree = "0.20.0"
rpassword = "7.3.1"
sea-orm = { version = "1.0.0", default-features = false, features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-native-tls",
    "with-json",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = "1.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tokio = { workspace = true }
tokio-tar = "0.3.1"
tokio-util = "0.7.12"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
async-once-cell = "0.5.3"

[features]
# default = ["debugging"]
debugging = ["dep:http-body-util"]
