[package]
name = "netmito"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-compression = { version = "0.4.23", features = ["gzip", "tokio"] }
aws-sdk-s3 = { version = "1.90.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.4", features = ["http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
clap = { workspace = true }
clap-repl = "0.3.2"
dirs = "6.0.0"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.31"
http-body-util = { version = "0.1.3", optional = true }
humansize = "2.1.3"
humantime-serde = "1.1.1"
jsonwebtoken = { workspace = true }
matrix_match = "1.0.0"
md5 = { workspace = true }
nix = { version = "0.30.1", features = ["process", "signal"] }
once_cell = "1.21.3"
ouroboros = "0.18.5"
path-clean = "1.0.1"
priority-queue = "2.5.0"
rand = "0.9.1"
redis = { workspace = true }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
roxmltree = "0.20.0"
rpassword = "7.4.0"
sea-orm = { version = "1.1.11", default-features = false, features = [
  "sqlx-postgres",
  "macros",
  "runtime-tokio-native-tls",
  "with-json",
  "with-time",
  "with-uuid",
] }
sea-orm-migration = "1.1.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde-human-readable"] }
tokio = { workspace = true }
tokio-tar = "0.3.1"
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
async-once-cell = "0.5.4"

[features]
# default = ["debugging"]
debugging = ["dep:http-body-util"]
