[package]
name = "netmito"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-compression = { version = "0.4.36", features = ["gzip", "tokio"] }
async-stream = "0.3.6"
aws-sdk-s3 = { version = "1.117", features = ["behavior-version-latest"] }
axum = { version = "0.8.7", features = ["http2", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header", "query"] }
base64 = "0.22.1"
clap = { workspace = true }
clap-repl = "0.3.2"
crossfire = { version = "2.1.8", features = ["tokio"] }
derive_more = { version = "2.1.0", features = ["from"] }
dirs = "6.0.0"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.31"
http-body-util = { version = "0.1.3", optional = true }
humansize = "2.1.3"
humantime = "2.1.0"
humantime-serde = "1.1.1"
indicatif = "0.18.3"
jsonwebtoken = { workspace = true }
matrix_match = "1.0.0"
md5 = { workspace = true }
nix = { version = "0.30.1", features = ["process", "signal"] }
once_cell = "1.21.3"
ouroboros = "0.18.5"
parse-size = "1.1.0"
path-clean = "1.0.1"
priority-queue = "2.7.0"
rand = "0.9.2"
redis = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "http2",
  "charset",
  "rustls-tls",
  "system-proxy",
] }
roxmltree = "0.21.1"
rpassword = "7.4.0"
sea-orm = { version = "1.1.19", default-features = false, features = [
  "sqlx-postgres",
  "macros",
  "runtime-tokio-rustls",
  "with-json",
  "with-time",
  "with-uuid",
] }
sea-orm-migration = "1.1.19"
serde = { workspace = true }
serde_json = { workspace = true }
speedy = { version = "0.8.7", features = ["uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.46", features = ["serde-human-readable"] }
tokio = { workspace = true }
tokio-tar = "0.3.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.20", features = ["v4"] }

[dev-dependencies]
async-once-cell = "0.5.4"

[features]
# default = ["debugging"]
debugging = ["dep:http-body-util"]
